2010-05-28  Shu Chang  <chang.shu@nokia.com>

        Unreviewed.

        Remove two junk files not supposed to be in.

        * canvas/philip/tests/.reportgen.html.swp: Removed.
        * canvas/philip/tests/.reportgen.js.swp: Removed.

2010-05-28  Mikhail Naganov  <mnaganov@chromium.org>

        Reviewed by Yury Semikhatsky.

        Web Inspector: add Console API for retrieving memory stats

        Add 'console.memory' property which returns an object. Currently
        it has two fields: totalHeapSize and usedHeapSize. Later, it can be
        extended for reporting total browser's memory consumption.

        https://bugs.webkit.org/show_bug.cgi?id=39840

        * fast/dom/Window/window-properties-expected.txt:
        * platform/gtk/fast/dom/Window/window-properties-expected.txt:
        * platform/qt/fast/dom/Window/window-properties-expected.txt:

2010-05-28  Yael Aharon  <yael.aharon@nokia.com>

        Reviewed by Laszlo Gombos.

        [Qt] Pass all web notification layout tests
        https://bugs.webkit.org/show_bug.cgi?id=39146

        * platform/qt/Skipped:

2010-05-28  Eric Seidel  <eric@webkit.org>

        Reviewed by Adam Barth.

        document.write does not work correctly in the HTML5 parser
        https://bugs.webkit.org/show_bug.cgi?id=39828

        Add two tests for document.write behavior and update
        our expected results to remove two parse errors now that
        document.write is functioning correctly.

        * html5lib/resources/webkit01.dat:
        * html5lib/runner-expected-html5.txt:

2010-05-27  MORITA Hajime  <morrita@google.com>

        Reviewed by Ojan Vafai.

        Cursor movement and text selection does not work well if a block is followed by an inline.
        https://bugs.webkit.org/show_bug.cgi?id=32123

        RenderInline::setSelectionState() missed selection state
        propagation for ancestors.  This fix pulled
        RenderBlock::setSelectionState() up to RenderBoxModelObject, to