@@ -1678,9 +1678,6 @@ window.console.group [function]
 window.console.groupEnd [function]
 window.console.info [function]
 window.console.log [function]
-window.console.memory [object Object]
-window.console.memory.totalHeapSize [number]
-window.console.memory.usedHeapSize [number]
 window.console.profile [function]
 window.console.profileEnd [function]
 window.console.profiles [object Array]
