@@ -33,7 +33,6 @@
 #include "V8Console.h"
 
 #include "Console.h"
-#include "ScriptObject.h"
 #include "ScriptProfile.h"
 #include "V8Binding.h"
 #include "V8Proxy.h"
@@ -48,13 +47,6 @@ v8::Handle<v8::Value> V8Console::profilesAccessorGetter(v8::Local<v8::String>, c
     INC_STATS("DOM.Console.profilesAccessorGetter");
     // FIXME: Provide a real implementation.
     return v8::Array::New(0);
-}
-
-v8::Handle<v8::Value> V8Console::memoryAccessorGetter(v8::Local<v8::String>, const v8::AccessorInfo& info)
-{
-    INC_STATS("DOM.Console.memoryAccessorGetter");
-    Console* console = V8Console::toNative(info.Holder());
-    return console->memory().v8Object();
 }
 
 } // namespace WebCore
