@@ -60,8 +60,6 @@ module window {
         [CustomArgumentHandling] void group();
         [CustomArgumentHandling] void groupCollapsed();
         void groupEnd();
-
-        readonly attribute [CustomGetter,Conditional=INSPECTOR] DOMObject memory;
     };
 
 }
