@@ -1,3 +1,15 @@
+2010-05-28  Mikhail Naganov  <mnaganov@chromium.org>
+
+        Unreviewed. Revert 60353 -- immature.
+
+        https://bugs.webkit.org/show_bug.cgi?id=39646
+
+        * bindings/js/JSConsoleCustom.cpp:
+        * bindings/v8/custom/V8ConsoleCustom.cpp:
+        * page/Console.cpp:
+        * page/Console.h:
+        * page/Console.idl:
+
 2010-05-27  Darin Adler  <darin@apple.com>
 
         Reviewed by David Levin.
